[metadata]
name = pyspyder
version = 0.0.1
description = Inference engine for Python, based on Tree Sitter.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sauravsrijan/Spyder
author = Srijan Saurav
author_email = sauravsrijan@gmail.com
license = APACHE-2.0
license_file = LICENSE
classifiers = 
	LICENSE :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython
	Typing :: Typed
	Development Status :: 3 - Alpha

[options]
py_modules = 
python_requires = >=3.10

[options.entry_points]
console_scripts = 

[options.extras_require]
dev = 
	pytest
	mypy

